<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/etModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/model"
            android:background="@drawable/border_edit_text"/>
        <EditText
            android:id="@+id/etLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/license_plate"
            android:background="@drawable/border_edit_text"/>
        <EditText
            android:id="@+id/etProductionYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="4dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:hint="@string/production_year"
            android:inputType="number"
            android:background="@drawable/border_edit_text"/>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:text="@string/add"/>
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/next"/>
        <TextView
            android:id="@+id/text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>